<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>gg.solarmc</groupId>
        <artifactId>solar-parent</artifactId>
        <version>0.6.1</version>
    </parent>

    <profiles>
        <profile>
            <id>downloadSources</id>
            <properties>
                <downloadSources>true</downloadSources>
                <downloadJavadocs>true</downloadJavadocs>
            </properties>
        </profile>
    </profiles>
    <artifactId>SolarCredits</artifactId>
    <version>0.1.1_17-SNAPSHOT</version>

    <properties>
        <junit.version>5.7.0</junit.version>
        <solarapi.version>1.2.0-SNAPSHOT</solarapi.version>
        <loader.version>0.5.1</loader.version>
        <canvas.version>1.7.2</canvas.version>
        <okhttp.version>4.9.1</okhttp.version>
        <dazzleconf.version>1.2.0-M2</dazzleconf.version>
        <papi.version>2.10.9</papi.version>
        <java.version>16</java.version>
    </properties>

    <licenses>
        <license>
            <name>GNU Affero General Public License, Version 3</name>
            <url>https://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <distributionManagement>
        <repository>
            <id>solar-repo</id>
            <url>https://mvn-repo.solarmc.gg/releases</url>
        </repository>
        <snapshotRepository>
            <id>solar-repo</id>
            <url>https://mvn-repo.solarmc.gg/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <!-- https://github.com/SolarMC-Dev/SolarPaper-API/blob/master/pom.xml -->
        <dependency>
            <groupId>gg.solarmc.paper</groupId>
            <artifactId>solarpaper-api</artifactId>
            <version>${solarapi.version}</version>
        </dependency>

        <!-- https://github.com/SolarMC-Dev/DataLoader/tree/master/mod-credits -->
        <dependency>
            <groupId>gg.solarmc.loader</groupId>
            <artifactId>loader-mod-credits</artifactId>
            <version>${loader.version}</version>
        </dependency>

        <!-- https://github.com/IPVP-MC/canvas/ -->
        <dependency>
            <groupId>org.ipvp</groupId>
            <artifactId>canvas</artifactId>
            <version>${canvas.version}</version>
        </dependency>

        <!-- https://github.com/square/okhttp -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
        </dependency>

        <!-- https://github.com/A248/DazzleConf -->
        <dependency>
            <groupId>space.arim.dazzleconf</groupId>
            <artifactId>dazzleconf-ext-snakeyaml</artifactId>
            <version>${dazzleconf.version}</version>
        </dependency>

        <!-- https://github.com/PlaceholderAPI/PlaceholderAPI/ -->
        <dependency>
        <groupId>me.clip</groupId>
        <artifactId>placeholderapi</artifactId>
        <version>${papi.version}</version>
        <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>solar-releases</id>
            <url>https://mvn-repo.solarmc.gg/releases</url>
        </repository>
        <repository>
            <id>solar-snapshots</id>
            <url>https://mvn-repo.solarmc.gg/snapshots</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>sources</goal>
                            <goal>resolve</goal>
                        </goals>
                        <configuration>
                            <classifier>javadoc</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>org.ipvp:canvas</include>
                            <include>com.squareup.okhttp3:okhttp</include>
                            <include>com.squareup.okio:okio</include>
                            <include>org.jetbrains.kotlin:kotlin-stdlib</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>okhttp3</pattern>
                            <shadedPattern>gg.solarmc.solarcredits.okhttp3</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okio</pattern>
                            <shadedPattern>gg.solarmc.solarcredits.okio</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>